examples/test/testpolicy15486.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15486
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key21: value13
      key31: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value38
          key18: value30
          key29: value13
      podSelector:
        matchLabels:
          key20: value43
